============================================================
=== 2017

	[mlocarna] Fix specifying anchor constraints via bed file
	           allow arbitrary order of entries in bed input
	[mlocarna] Refactor computation of input pp files;
	           support caching of pp files (--dp-cache)

1.9.3beta2 (2017-07-25)
	Code improvements
	  * command line help
	  * named arguments
	  * zip and enumerate iterators
	  * fight code rot, more use of C++11/14 features
	[security] Avoid shell evaluation in mlocarna system calls
	Use locarna_rnafold_pp for constrained folding in mlocarna
	Optimize inner loop (add sentinels to left and right adjacency lists)

1.9.3alpha
	Reduce memory footprint of locarna
	Enable optional extended double for partition functions without
	  recompiling (AlignerP/locarna_p)
	Transition to C++14;  modernized and restructured code

1.9.2 (2017-07-04)
	Improve consensus dotplot computation (avoid accumulation of low
	  probability base pairs)
	Some cleanup

	1.9.2pre4
	Fix left and rightmost anchors (fixed local alignment); add unit tests
	Optimize maximization in innermost loop
	Add unit and program tests

	1.9.2pre3
	Make consensus structure / dotplot types independent [option
	  --consensus-structure alifold (current default) used to also
	  determine the computation of consensus dotplots. The consensus
	  dot plot is now independent (new default: no alifold consensus
	  dot plot).]

	fix strict semantics for anchor constraints
        fix compatibility '--keep-sequence-order' with anchor constraints

	1.9.2pre2
	mlocarna: write ps files (aln.ps, alirna.ps and if probabilistic,
          alidot.ps) from alifold call on result alignment to the
          results output directory;
          use alifold options --aln --color --mis
	fix mlocarna: find pw-aligner and pw-aligner-p executables in PATH

1.9.1 (2017-01-22)
	improve help and man pages for locarna, locarna_p, sparse;
	  refactor code for help text (string map for help text)