@@ -1,0 +1,11 @@
+CLUSTAL W --- LocARNA 1.9.0
+
+
+
+vhuU               AG-CUCACAACCGAACCCAU-------------UUGGGAGGUUGUGAGCU-
+fwdB               AU-GUUGGAGGGGAACCCGU-------------AAGGGACCCUCCAAGAU-
+selD               UUACGAUGUGCCGAACCCUU------------UAAGGGAGGCACAUCGAAA
+hdrA               GG--CACCACUCGAAGGCU--------------AAGCCAAAGUGGUG-CU-
+vhuD               GU--UCUCUCGGGAACCCGU------------CAAGGGACCGAGAGA-AC-
+fdhA               CG-CCACCCUGCGAACCCAAUAUAAAAUAAUACAAGGGAGCAG-GUGGCG-
+fruA               CC---UCGAGGGGAACCCGA-------------AAGGGACCCGAGA--GG-
